--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,8 @@ jobs:
       - id: pull-latest-from-master
         name: "Get latest codebase from master"
         uses: actions/checkout@v2
+        with:
+          ref: master
       - id: run-build
         name: "Run Build"
         run: |
@@ -28,7 +30,7 @@ jobs:
         name: "Copy artifacts to Temp"
         run: |
           mkdir /tmp/www
-          cp dist/cmxiv-github-io/* /tmp/www/.
+          cp -r dist/cmxiv-github-io/* /tmp/www/.
       - id: checkout-deployment
         name: "Checkout deployment branch"
         uses: actions/checkout@v2
@@ -38,7 +40,7 @@ jobs:
         name: "Update deployment branch"
         run: |
           rm -rf ./*
-          cp /tmp/www/* .
+          cp -r /tmp/www/* .
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
