--- a/package.json
+++ b/package.json
@@ -1,42 +1,23 @@
 {
-    "name": "cmxiv-github-io",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "jest",
-        "test:watch": "jest --watch"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~12.1.0",
-        "@angular/common": "~12.1.0",
-        "@angular/compiler": "~12.1.0",
-        "@angular/core": "~12.1.0",
-        "@angular/forms": "~12.1.0",
-        "@angular/platform-browser": "~12.1.0",
-        "@angular/platform-browser-dynamic": "~12.1.0",
-        "@angular/router": "~12.1.0",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.2.0",
-        "zone.js": "~0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~12.1.0",
-        "@angular/cli": "~12.1.0",
-        "@angular/compiler-cli": "~12.1.0",
-        "@types/jest": "^26.0.23",
-        "@types/node": "^12.11.1",
-        "jest": "^27.0.6",
-        "jest-preset-angular": "^9.0.4",
-        "typescript": "~4.3.2"
-    },
-    "jest": {
-        "preset": "jest-preset-angular",
-        "setupFilesAfterEnv": [
-            "<rootDir>/src/setupJest.ts"
-        ]
-    }
+  "name": "cmxiv.github.io",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "sass": "^1.57.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
+  }
 }
