--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "type": "module",
     "scripts": {
         "dev": "vite --port 3000",
-        "build": "tsc && vite build",
+        "build": "yarn clean && tsc && vite build",
         "preview": "vite preview",
-        "lint": "eslint . --ext .ts .tsx"
+        "lint": "eslint . --ext .ts .tsx",
+        "clean": "rm -rf dist"
     },
     "dependencies": {
         "react": "^18.2.0",
