--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
         "clean": "rm -rf dist"
     },
     "dependencies": {
+        "axios": "^1.7.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
+        "rehype-highlight": "^7.0.0",
+        "remark-gfm": "^4.0.0"
     },
     "devDependencies": {
         "@storybook/addon-interactions": "^6.5.15",
